# solsim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/: bsc5.csv
assets/textures/: ATTRIBUTION.md
docs/: MATHS.md  SOLAR_SYSTEM_BUILD_PLAN.md  gpu-nbody.md  math-en.md  math-nl.md
labs/: Cargo.toml  README.md
labs/lessons/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
labs/solutions/: lab1.rs  lab2.rs  lab3.rs  lab4.rs  lab5.rs  lab6.rs  lab7.rs
labs/src/: lib.rs
labs/tests/: lab1.rs  lab2.rs  lab3.rs  lab4.rs  lab5.rs  lab6.rs  lab7.rs
src/: bodies.rs  config.rs  edu.rs  galaxy_mode.rs  main.rs  noise.rs  rng.rs
src/astro/: constants.rs  elements.rs  ephemeris.rs  mod.rs  time.rs
src/physics/: energy.rs  forces.rs  galactic.rs  galaxy_ic.rs  gpu.rs  mod.rs  nbody.rs  octree.rs  particles.rs
src/render/: areas.rs  arrows.rs  camera.rs  clouds.rs  grid.rs  logscale.rs  mod.rs  points.rs  rings.rs  screenshot.rs  sphere.rs  starfield.rs  textures.rs  trails.rs  viewpoints.rs
src/stars/: catalog.rs  color.rs  galaxy.rs  mod.rs  project.rs
src/ui/: energy.rs  manual.rs  mod.rs
