[package]
name = "solarsim"
version = "0.1.0"
edition = "2021"

[dependencies]
astro = "2.0.0"
bytemuck = { version = "1", features = ["derive"] }
egui = "0.35"
egui-wgpu = "0.35.0"
egui-winit = { version = "0.35", default-features = false, features = ["wayland", "links"] }
glam = "0.30"
pollster = "0.4"
vsop87 = "3.0.0"
wgpu = "29.0.3"
winit = "0.30"
